--- a/index.html
+++ b/index.html
@@ -29,34 +29,29 @@
         <div class="line1"></div>
         <div class="cup"><i class="fas fa-coffee"></i></div>
         <div class="line2"></div>
-        <div class="line3"></div>
+
         <div class="details">
-        <div class="contact"><i class="fas fa-phone-alt"></i></div>
-        <div class="number">0123456789</div>
+            <div class="line3"></div>
+            <div class="contact"><i class="fas fa-phone-alt"></i></div>
+            <div class="number">012 345 6789</div>
         </div>
-
-
-        <div class="line3"></div>
         <div class="details">
-        <div class="contact"><i class="fas fa-envelope-square"></i></div>
-        <div class="number">jinkalparmar07@gmail.com</div>
+            <div class="line3"></div>
+            <div class="contact"><i class="fas fa-envelope-square"></i></div>
+            <div class="number">jinkalparmar07@gmail.com</div>
         </div>
-
-
-        <div class="line3"></div>
         <div class="details">
-        <div class="contact"><i class="fas fa-globe"></i></div>
-        <div class="number"><a href="https://www.google.com/">www.google.com</a></div>
+            <div class="line3"></div>
+            <div class="contact"><i class="fas fa-globe"></i></div>
+            <div class="number"><a href="https://www.google.com/">www.google.com</a></div>
         </div>
-
-
-        <div class="line3"></div>
         <div class="details">
-        <div class="contact"><i class="fas fa-map-marker-alt"></i></div>
-        <div class="number"><a href="https://www.google.com/maps/@22.2377709,73.1031773,17z">At.Sokhda,Padra,Vadodara</a></div>
+            <div class="line3"></div>
+            <div class="contact"><i class="fas fa-map-marker-alt"></i></div>
+            <div class="number"><a href="https://www.google.com/maps/@22.2377709,73.1031773,17z">Sokhdakurd,Padra,Vadodara</a></div>
         </div>
-
-    </div>
+       
+       </div>
     <div class="media">
         <div class="icon"><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a></div>
         <div class="icon"><a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></div>
